--- a/app/src/main/res/layout/activity_dev_menu.xml
+++ b/app/src/main/res/layout/activity_dev_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,29 +9,39 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:text="Developer Options"
         android:textSize="18sp"
-        android:text="Developer Options"/>
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp">
-<TextView
-android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:text="Enable DEBUG logs"/>
-<Switch
-    android:id="@+id/swDebugLogs"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Enable DEBUG logs" />
+
+        <Switch
+            android:id="@+id/swDebugLogs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-<Button
-    android:id="@+id/btnExportDiag"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Export diagnostics (.zip)"/>
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnExportDiag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Export diagnostics (.zip)" />
+
+    <Button
+        android:id="@+id/btnPickRunStage2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Pick image &amp; Run Stage-2" />
+
+</LinearLayout>
