--- a/app/src/main/res/layout/activity_dev_menu.xml
+++ b/app/src/main/res/layout/activity_dev_menu.xml
@@ -44,4 +44,11 @@
         android:layout_marginTop="12dp"
         android:text="Pick image &amp; Run Stage-2" />
 
+    <Button
+        android:id="@+id/btnPickAnalyzeStage3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Pick image &amp; Analyze (Stage-3)" />
+
 </LinearLayout>
