feat(s7.3): greedy palette growth (split-largest/medoid) + residual heatmap overlay + diagnostics

--- a/app/src/main/res/layout/activity_import.xml
+++ b/app/src/main/res/layout/activity_import.xml
@@ -31,6 +31,13 @@
             android:layout_marginStart="8dp"
             android:text="Init K₀" />
 
+        <Button
+            android:id="@+id/btnGrowK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Grow S7.3" />
+
         <CheckBox
             android:id="@+id/cbSampling"
             android:layout_width="wrap_content"
