--- a/app/src/main/res/layout/activity_import.xml
+++ b/app/src/main/res/layout/activity_import.xml
@@ -38,6 +38,13 @@
             android:layout_marginStart="8dp"
             android:text="Grow S7.3" />
 
+        <Button
+            android:id="@+id/btnSpread2Opt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Spread 2-opt" />
+
         <CheckBox
             android:id="@+id/cbSampling"
             android:layout_width="wrap_content"
@@ -51,6 +58,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Палитра K₀" />
+
+        <CheckBox
+            android:id="@+id/cbSpreadBeforeAfter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="S7.4 До" />
 
         <TextView
             android:id="@+id/tvFileName"
