--- a/app/src/main/res/layout/activity_import.xml
+++ b/app/src/main/res/layout/activity_import.xml
@@ -59,6 +59,13 @@
             android:layout_marginStart="8dp"
             android:text="Index (S7.6)" />
 
+        <Button
+            android:id="@+id/btnLogPalette"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Log Palette" />
+
         <CheckBox
             android:id="@+id/cbSampling"
             android:layout_width="wrap_content"
