Add main thread watchdog and developer controls

--- a/app/src/main/res/layout/activity_dev_menu.xml
+++ b/app/src/main/res/layout/activity_dev_menu.xml
@@ -31,6 +31,24 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Enable main-thread watchdog" />
+
+        <Switch
+            android:id="@+id/swWatchdog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnExportDiag"
         android:layout_width="match_parent"
